# community-calendar

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: test.yml
app/: config.py  main.py  models.py  utilities.py
app/routers/: calendar.py
tests/: test_calendar_endpoints.py
