[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "community-calendar"
version = "0.0.1"
description = "a server for providing ics calendars for community events"
readme = "README.md"
authors = [
    {name = "Steven A. Bjornson", email = "info@sabjorn.net"}
]
license = {text = "MIT License"}
requires-python = ">=3.9"
dependencies = [
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = []

[project.urls]
Homepage = "https://github.com/sabjorn/community-calendar"


[dependency-groups]
dev = [
    "pre-commit",
]
