[project]
name = "community-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "icalendar>=6.3.1",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.5",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "types-requests>=2.31.0",
]
test = [
    "pytest>=8.0.0",
    "httpx>=0.25.0",
]
